# multi_template_matching_py

./: .gitignore  pyproject.toml
benchmark/: versus_cv2.py
output/: matches.json
src/: correlation.py  main.py  match.py  mipmap.py  temp.py  temp2.py  temp3.py  temp4.py  tools.py
src_legacy/: temp2.py  temp4.py  temp5.py
tools/: MatchWords.py  jatlas_image_from_cutouts.py
