[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "multi_template_matching"
authors = [{ name = "Omar Azmi" }]
readme = "./readme.md"
requires-python = ">=3.11"
keywords = ["template-matching", "template", "find-in-image"]
license = { text = "undefined" }
dependencies = ["numpy"]
version = "0.1.0"
description = "naive way of template matching with optional weighting/masking, but works 9x slower than opencv's more general cross-correlation template matching. subharashii indeed!"

[project.urls]
Source = "https://github.com/omar-azmi/multi_template_matching_py"

[project.optional-dependencies]
benchmark = ["opencv-python"]

[tool.autopep8]
max_line_length = 512
ignore = ["W191", "E701", "C0103"]

[tool.pylint.messages_control]
max-line-length = 512
indent-string = "\t"
disable = [
	"missing-docstring",
	"invalid-name",
	"line-too-long",
	"too-many-arguments",
	"C0321",
]

[tool.pylint.design]
# limiting the number of returns might discourage
# the use of guard clauses. So we increase the
# allowed number of returns from 6 to 8
max-returns = 8
